# palabos

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  SConstruct
src/: CMakeLists.txt  palabos2D.h  palabos2D.hh  palabos3D.h  palabos3D.hh
src/algorithm/: basicAlgorithms.cpp  basicAlgorithms.h  basicAlgorithms.hh  basicDataTypes.h  benchmarkUtil.h  benchmarkUtil.hh  empiricalData.cpp  empiricalData.h  functions.h  headers2D.h  headers2D.hh  headers3D.h  headers3D.hh  interpolation2D.h  interpolation2D.hh  linearAlgebra.h  linearAlgebra.hh  nonlinearEquationSolvers.h  nonlinearEquationSolvers.hh  quadrature.h  quadrature.hh  spline.h  spline.hh  statistics.cpp  statistics.h  timePeriodicSignal.h  timePeriodicSignal.hh
src/atomicBlock/: atomicBlock2D.cpp  atomicBlock2D.h  atomicBlock3D.cpp  atomicBlock3D.h  atomicBlockOperations2D.cpp  atomicBlockOperations2D.h  atomicBlockOperations3D.cpp  atomicBlockOperations3D.h  atomicBlockSerializer2D.cpp  atomicBlockSerializer2D.h  atomicBlockSerializer3D.cpp  atomicBlockSerializer3D.h  atomicContainerBlock2D.cpp  atomicContainerBlock2D.h  atomicContainerBlock3D.cpp  atomicContainerBlock3D.h  blockLattice2D.h  blockLattice2D.hh  blockLattice3D.h  blockLattice3D.hh  dataField2D.h  dataField2D.hh  dataField3D.h  dataField3D.hh  dataProcessingFunctional2D.cpp  dataProcessingFunctional2D.h  dataProcessingFunctional2D.hh  dataProcessingFunctional3D.cpp  dataProcessingFunctional3D.h  dataProcessingFunctional3D.hh  dataProcessor2D.cpp  dataProcessor2D.h  dataProcessor3D.cpp  dataProcessor3D.h  dataProcessorWrapper2D.cpp  dataProcessorWrapper2D.h  dataProcessorWrapper2D.hh  dataProcessorWrapper3D.cpp  dataProcessorWrapper3D.h  dataProcessorWrapper3D.hh  (+16 more)
src/basicDynamics/: dynamicsProcessor2D.h  dynamicsProcessor2D.hh  dynamicsProcessor3D.h  dynamicsProcessor3D.hh  externalForceDynamics.h  externalForceDynamics.hh  headers2D.h  headers2D.hh  headers3D.h  headers3D.hh  isoThermalDynamics.h  isoThermalDynamics.hh  thermalDynamics.h  thermalDynamics.hh
src/boundaryCondition/: NLD_boundaries3D.h  NLD_boundaries3D.hh  NLD_boundaryDynamics3D.h  NLD_boundaryDynamics3D.hh  bounceBackModels.h  bounceBackModels.hh  bounceBackModels2D.h  bounceBackModels2D.hh  bounceBackModels3D.h  bounceBackModels3D.hh  boundaryCondition.h  boundaryCondition2D.h  boundaryCondition2D.hh  boundaryCondition3D.h  boundaryCondition3D.hh  boundaryDynamics.h  boundaryDynamics.hh  boundaryInstantiator2D.h  boundaryInstantiator3D.h  boundaryTemplates.h  equilibriumBoundaryDynamics.h  equilibriumBoundaryDynamics.hh  finiteDifferenceBoundaryProcessor2D.h  finiteDifferenceBoundaryProcessor2D.hh  finiteDifferenceBoundaryProcessor3D.h  finiteDifferenceBoundaryProcessor3D.hh  generalizedBoundaryCondition2D.h  generalizedBoundaryCondition2D.hh  generalizedBoundaryCondition3D.h  generalizedBoundaryCondition3D.hh  generalizedBoundaryDynamics.h  generalizedBoundaryDynamics.hh  generalizedBoundaryDynamicsSolvers.h  generalizedBoundaryDynamicsSolvers.hh  generalizedCompressibleBoundaryTemplates.h  generalizedIncompressibleBoundaryTemplates.h  headers2D.h  headers2D.hh  headers3D.h  headers3D.hh  (+28 more)
src/coProcessors/: coProcessor3D.h  coProcessor3D.hh  coProcessorCommunication3D.h  coProcessorCommunication3D.hh  coProcessorFunctional3D.h  coProcessorFunctional3D.hh  coProcessorInstantiation3D.h  coProcessorInstantiation3D.hh  headers3D.h  headers3D.hh
src/complexDynamics/: adiabaticBoundaryProcessor2D.h  adiabaticBoundaryProcessor2D.hh  adiabaticBoundaryProcessor3D.h  adiabaticBoundaryProcessor3D.hh  advectionDiffusionBoundaries.h  advectionDiffusionBoundaries.hh  advectionDiffusionBoundaryCondition2D.h  advectionDiffusionBoundaryCondition2D.hh  advectionDiffusionBoundaryCondition3D.h  advectionDiffusionBoundaryCondition3D.hh  advectionDiffusionBoundaryInstantiator2D.h  advectionDiffusionBoundaryInstantiator3D.h  advectionDiffusionDynamics.h  advectionDiffusionDynamics.hh  advectionDiffusionProcessor2D.h  advectionDiffusionProcessor2D.hh  advectionDiffusionProcessor3D.h  advectionDiffusionProcessor3D.hh  advectionDiffusionUnits.h  asinariModel.h  asinariModel.hh  asinariTemplates.h  carreauDynamics.h  carreauDynamics.hh  carreauDynamicsTemplates.h  carreauGlobalDefs.cpp  carreauGlobalDefs.h  carreauUnits.h  dynamicSmagorinskyDynamics.h  dynamicSmagorinskyLattices2D.h  dynamicSmagorinskyLattices3D.h  dynamicSmagorinskyProcessor3D.h  dynamicSmagorinskyProcessor3D.hh  entropicDynamics.h  entropicDynamics.hh  externalForceMrtDynamics.h  externalForceMrtDynamics.hh  headers2D.h  headers2D.hh  headers3D.h  (+18 more)
src/core/: array.h  block2D.cpp  block2D.h  block3D.cpp  block3D.h  blockIdentifiers.cpp  blockIdentifiers.h  blockLatticeBase2D.h  blockLatticeBase2D.hh  blockLatticeBase3D.h  blockLatticeBase3D.hh  blockStatistics.cpp  blockStatistics.h  blockSurface2D.cpp  blockSurface2D.h  blockSurface3D.cpp  blockSurface3D.h  cell.h  cell.hh  dataFieldBase2D.h  dataFieldBase3D.h  dynamics.h  dynamics.hh  dynamicsIdentifiers.h  dynamicsIdentifiers.hh  functions.h  geometry2D.h  geometry3D.h  globalDefs.cpp  globalDefs.h  headers2D.h  headers2D.hh  headers3D.h  headers3D.hh  hierarchicSerializer.h  indexUtil.cpp  indexUtil.h  indexUtil.hh  latticeStatistics.h  multiBlockIdentifiers2D.cpp  (+37 more)
src/dataProcessors/: dataAnalysisFunctional2D.h  dataAnalysisFunctional2D.hh  dataAnalysisFunctional3D.h  dataAnalysisFunctional3D.hh  dataAnalysisGenerics2D.h  dataAnalysisGenerics3D.h  dataAnalysisWrapper2D.h  dataAnalysisWrapper2D.hh  dataAnalysisWrapper3D.h  dataAnalysisWrapper3D.hh  dataInitializerFunctional2D.h  dataInitializerFunctional2D.hh  dataInitializerFunctional3D.h  dataInitializerFunctional3D.hh  dataInitializerGenerics2D.h  dataInitializerGenerics3D.h  dataInitializerWrapper2D.h  dataInitializerWrapper2D.hh  dataInitializerWrapper3D.h  dataInitializerWrapper3D.hh  headers2D.h  headers2D.hh  headers3D.h  headers3D.hh  metaStuffFunctional2D.cpp  metaStuffFunctional2D.h  metaStuffFunctional2D.hh  metaStuffFunctional3D.cpp  metaStuffFunctional3D.h  metaStuffFunctional3D.hh  metaStuffHelper.h  (+14 more)
(+1005 files in other folders)
